--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Band Name Generator - Create Unique Multilingual Band Names Instantly</title>
+    <meta name="description" content="Generate creative band names in multiple languages including English, Chinese, Japanese, Korean, and Spanish. Free online tool for musicians worldwide." />
+    <link rel="canonical" href="https://bandnamegenerator.online" />
+    <meta property="og:title" content="Band Name Generator - Create Unique Multilingual Band Names" />
+    <meta property="og:description" content="Generate creative band names in multiple languages. Free online tool for musicians worldwide." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://bandnamegenerator.online" />
   </head>
-
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/react-app/main.tsx" nonce="MTEyOTg4MDA4NCwxODA3OTY3NTU3"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
